create currency-input component

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
-/* You can add global styles to this file, and also import other style files */
+@import url(assets/stylesheets/_reset.scss);
+
+html {
+  color-scheme: dark light;
+}
+
+body {
+  min-height: 100dvh;
+  display: grid;
+  gap: 2rem;
+  place-content: center;
+}
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
