--- a/src/app/currency-converter/currency-converter.component.html
+++ b/src/app/currency-converter/currency-converter.component.html
@@ -1,2 +1,3 @@
 
-  <app-currency-input></app-currency-input>
+<app-currency-input></app-currency-input>
+<app-currency-select></app-currency-select>
