--- a/src/app/currency-converter/currency-converter.component.scss
+++ b/src/app/currency-converter/currency-converter.component.scss
@@ -1,1 +1,23 @@
+$main-bg: #262629;
+$border-bg: #6e6e6e;
 
+$font-size: 2em;
+
+$font-color: white;
+$font-color2: #606065;
+
+app-currency-input {
+  width: 20rem;
+}
+
+.currency-converter__wrap {
+  width: 30rem;
+  height: 20rem;
+  padding: 1rem;
+  border: 0.11em solid $border-bg;
+  border-radius: 1em;
+  background-color: $main-bg;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
